--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,11 @@
 name: Deploy Vite site to GitHub Pages
 
+# Trigger deploy only when a PR is merged into main
 on:
   push:
     branches:
-      - main  # 👈 change if your default branch is not main
-  workflow_dispatch: # allows manual runs
+      - main   # deploy only happens when main gets new commits (including merged PRs)
+  workflow_dispatch:   # optional: allows manual trigger if needed
 
 permissions:
   contents: read
@@ -34,14 +35,14 @@ jobs:
       - name: Upload build output
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist  # 👈 Vite outputs to dist by default
+          path: dist  # Vite outputs to dist
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
