--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,10 +26,10 @@ jobs:
           version: 9.2.0
 
       - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          cache: none
 
       - name: Install dependencies
         run: pnpm install
