--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,35 +2,35 @@ name: Pull Request
 
 on:
   pull_request:
+    branches: [main]
 
 jobs:
-  test:
-    name: Pull request test
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [20]
-
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2.0.1
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
-          version: 9.2.0
+          fetch-depth: 1
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      # Use Corepack to manage pnpm instead of downloading from npm registry
+      - name: Enable Corepack and pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.2.0 --activate
+
+      # Cache pnpm store to speed up installs
+      - name: Cache pnpm store
+        uses: actions/cache@v3
         with:
-          node-version: 18
-          cache: none
+          path: ~/.pnpm-store
+          key: pnpm-store-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            pnpm-store-${{ runner.os }}-
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install
 
-      - name: Build
-        run: pnpm run build
+      - name: Run tests
+        run: pnpm test
