--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,36 +1,36 @@
-name: Pull request test
+name: Pull Request
 
 on:
   pull_request:
-    branches: [main]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    name: Pull request test
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [20]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
+      - name: Checkout
+        uses: actions/checkout@master
 
-      # Use Corepack to manage pnpm instead of downloading from npm registry
-      - name: Enable Corepack and pnpm
+      - name: Setup Node.js ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'pnpm'
+
+      - name: Enable Corepack and PNPM
         run: |
           corepack enable
           corepack prepare pnpm@9.2.0 --activate
 
-      # Cache pnpm store to speed up installs
-      - name: Cache pnpm store
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: pnpm-store-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-store-${{ runner.os }}-
-
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm test
+      - name: Build
+        run: pnpm run build
