--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 9.2.0
 
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4
@@ -24,13 +29,8 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'pnpm'
 
-      - name: Enable Corepack and PNPM
-        run: |
-          corepack enable
-          corepack prepare pnpm@9.2.0 --activate
-
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm i
 
       - name: Build
         run: pnpm run build
