--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,7 @@ jobs:
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 9.2.0
+          run_install: false   # <- added to avoid hitting npm registry
 
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
