--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,32 +4,33 @@ on:
   push:
     branches:
       - main
+  # optional: also run when PR is merged to main
+  pull_request:
+    types:
+      - closed
 
 jobs:
   cd:
     name: Build and deploy
-
     strategy:
       matrix:
         os: [ubuntu-latest]
         node: [20]
-
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 9.2.0
-          run_install: false   # <- added to avoid hitting npm registry
+          run_install: false
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ${{ matrix.node }}
 
       - name: Install dependencies
         run: pnpm install
@@ -42,5 +43,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
