--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,6 +24,9 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'pnpm'
 
+      - name: Install pnpm
+        run: npm install -g pnpm@9
+
       - name: Cache PNPM Store
         uses: actions/cache@v3
         with:
