--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,5 +68,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           publish_dir: ./dist
+          force_orphan: true
