--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Build
         run: pnpm run build
 
+      - name: Add 404.html for client-side routing
+        run: cp dist/index.html dist/404.html
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
